[feat] 增加多节点docker添加功能, 优化接口规范
