# app/api/v1/docker/images.go
@@ -2,7 +2,8 @@ package docker
 
 import (
 	"dockerapi/app/response"
-	images2 "dockerapi/app/sdk/images"
+	images2 "dockerapi/app/service/docker/images"
+	"dockerapi/middleware"
 	"github.com/gin-gonic/gin"
 )
 
@@ -15,10 +16,13 @@ type ImagesApi struct {
 //	@Produce	json
 //	@Success 	200 {string}	json "{"code":200,"data":{},"msg":"请求成功"}"
 //  @Failure	400 {string}	json "{"code":400,"data":{},"msg":"请求失败"}"
-//	@Router		/api/v1/images/list [get]
+//	@Router		/api/v1/clouds/node/:node_name/images/list [get]
 func (image ImagesApi) List(ctx *gin.Context) {
 
-	imageInfo := image.imageService.List()
+	// docker node
+	middleware.InitCli(ctx)
+
+	imageInfo := image.imageService.List(ctx)
 	response.Success(ctx, imageInfo, "请求成功")
 
 }
@@ -29,13 +33,17 @@ func (image ImagesApi) List(ctx *gin.Context) {
 // 	@Param		name		path	string	true	"镜像名称"
 //	@Success 	200 {string}	json "{"code":200,"data":{},"msg":"请求成功"}"
 //  @Failure	400 {string}	json "{"code":400,"data":{},"msg":"请求失败"}"
-//	@Router		/api/v1/images/delete [post]
+//	@Router		/api/v1/clouds/node/:node_name/images/delete [post]
 func (image ImagesApi) Delete(ctx *gin.Context) {
+
+	// docker node
+	middleware.InitCli(ctx)
 
 	var req images2.ImageOperationStruct
 	_ = ctx.ShouldBindJSON(&req)
-	if err := image.imageService.Delete(req); err != nil {
+	if err := image.imageService.Delete(ctx, req); err != nil {
 		response.Fail(ctx, err.Error(), "删除失败")
+		return
 	} else {
 		response.Success(ctx, req, "删除成功")
 	}
@@ -48,14 +56,18 @@ func (image ImagesApi) Delete(ctx *gin.Context) {
 // 	@Param		name		path	string	true	"镜像名称"
 //	@Success 	200 {string}	json "{"code":200,"data":{},"msg":"请求成功"}"
 //  @Failure	400 {string}	json "{"code":400,"data":{},"msg":"请求失败"}"
-//	@Router		/api/v1/images/pull [post]
+//	@Router		/api/v1/clouds/node/:node_name/images/pull [post]
 func (image ImagesApi) Pull(ctx *gin.Context) {
+
+	// docker node
+	middleware.InitCli(ctx)
 
 	var req images2.ImageOperationStruct
 	_ = ctx.ShouldBindJSON(&req)
-	err := image.imageService.Pull(req.Name)
+	err := image.imageService.Pull(ctx, req.Name)
 	if err != nil {
 		response.Fail(ctx, err.Error(), "拉取失败")
+		return
 	} else {
 		response.Success(ctx, req.Name, "拉取成功")
 	}
@@ -68,12 +80,15 @@ func (image ImagesApi) Pull(ctx *gin.Context) {
 // 	@Param		name		path	string	true	"镜像名称"
 //	@Success 	200 {string}	json "{"code":200,"data":{},"msg":"请求成功"}"
 //  @Failure	400 {string}	json "{"code":400,"data":{},"msg":"请求失败"}"
-//	@Router		/api/v1/images/search [post]
+//	@Router		/api/v1/clouds/node/:node_name/images/search [post]
 func (image ImagesApi) Search(ctx *gin.Context) {
+
+	// docker node
+	middleware.InitCli(ctx)
 
 	var req images2.ImageOperationStruct
 	_ = ctx.ShouldBindJSON(&req)
-	info := image.imageService.Search(req.Name)
+	info := image.imageService.Search(ctx, req.Name)
 	response.Success(ctx, info, "查询成功")
 
 }
