# app/api/v1/docker/networks.go
@@ -2,7 +2,8 @@ package docker
 
 import (
 	"dockerapi/app/response"
-	networks2 "dockerapi/app/sdk/networks"
+	networks2 "dockerapi/app/service/docker/networks"
+	"dockerapi/middleware"
 	"github.com/gin-gonic/gin"
 )
 
@@ -15,10 +16,13 @@ type NetworksApi struct {
 //	@Produce	json
 //	@Success 	200 {string}	json "{"code":200,"data":{},"msg":"请求成功"}"
 //  @Failure	400 {string}	json "{"code":400,"data":{},"msg":"请求失败"}"
-//	@Router		/api/v1/networks/list [get]
+//	@Router		/api/v1/clouds/node/:node_name/networks/list [get]
 func (network NetworksApi) List(ctx *gin.Context) {
 
-	networkList := network.networkService.List()
+	// docker node
+	middleware.InitCli(ctx)
+
+	networkList := network.networkService.List(ctx)
 	response.Success(ctx, networkList, "请求成功")
 
 }
@@ -28,12 +32,15 @@ func (network NetworksApi) List(ctx *gin.Context) {
 //	@Produce	json
 //	@Success 	200 {string}	json "{"code":200,"data":{},"msg":"请求成功"}"
 //  @Failure	400 {string}	json "{"code":400,"data":{},"msg":"请求失败"}"
-//	@Router		/api/v1/networks/search [post]
+//	@Router		/api/v1/clouds/node/:node_name/networks/search [post]
 func (network NetworksApi) Search(ctx *gin.Context) {
+
+	// docker node
+	middleware.InitCli(ctx)
 
 	var req networks2.NetworkList
 	_ = ctx.ShouldBindJSON(&req)
-	networkList := network.networkService.Search(req.Name)
+	networkList := network.networkService.Search(ctx, req.Name)
 	response.Success(ctx, networkList, "查询成功")
 }
 
@@ -42,14 +49,18 @@ func (network NetworksApi) Search(ctx *gin.Context) {
 //	@Produce	json
 //	@Success 	200 {string}	json "{"code":200,"data":{},"msg":"请求成功"}"
 //  @Failure	400 {string}	json "{"code":400,"data":{},"msg":"请求失败"}"
-//	@Router		/api/v1/networks/create [post]
+//	@Router		/api/v1/clouds/node/:node_name/networks/create [post]
 func (network NetworksApi) Create(ctx *gin.Context) {
+
+	// docker node
+	middleware.InitCli(ctx)
 
 	var req networks2.NetworkCreateStruct
 	_ = ctx.ShouldBindJSON(&req)
-	err := network.networkService.Create(req)
+	err := network.networkService.Create(ctx, req)
 	if err != nil {
 		response.Fail(ctx, err.Error(), "创建失败")
+		return
 	} else {
 		response.Success(ctx, req, "创建成功")
 	}
@@ -61,14 +72,18 @@ func (network NetworksApi) Create(ctx *gin.Context) {
 //	@Produce	json
 //	@Success 	200 {string}	json "{"code":200,"data":{},"msg":"请求成功"}"
 //  @Failure	400 {string}	json "{"code":400,"data":{},"msg":"请求失败"}"
-//	@Router		/api/v1/networks/delete [post]
+//	@Router		/api/v1/clouds/node/:node_name/networks/delete [post]
 func (network NetworksApi) Delete(ctx *gin.Context) {
+
+	// docker node
+	middleware.InitCli(ctx)
 
 	var req networks2.NetworkDeleteStruct
 	_ = ctx.ShouldBindJSON(&req)
-	err := network.networkService.Delete(req)
+	err := network.networkService.Delete(ctx, req)
 	if err != nil {
 		response.Fail(ctx, err.Error(), "删除失败")
+		return
 	} else {
 		response.Success(ctx, req, "删除成功")
 	}
